--- a/GBetala.html
+++ b/GBetala.html
@@ -22,7 +22,7 @@
             <span>Email:</span> <input type="email" placeholder="Exempel@example.com">
           </div>
           <div class="inputBox">
-            <span>Address:</span> <input type="text" placeholder="room - street - locality">
+            <span>Address:</span> <input type="text" placeholder="Exempel 10">
           </div>
           <div class="inputBox">
             <span>Stad:</span> <input type="text" placeholder="Stockholm">
@@ -44,7 +44,7 @@
             <span>Namn på kortet:</span> <input type="text" placeholder="Noah Andersson">
           </div>
           <div class="inputBox">
-            <span>credit card number</span> <input type="number" placeholder="5412-7599-9999-9999">
+            <span>Nummer på Kreditkort</span> <input type="Nummer" placeholder="5412-7599-9999-9999">
           </div>
           <div class="inputBox">
             <span>Utgångsmånad</span> <input type="text" placeholder="Januari">
