--- a/FitnessHandlarInteOm.html
+++ b/FitnessHandlarInteOm.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <header class="header">
-    <a href="Gymgenius.html" class="logo"><span>Top</span>Gym</a>
+    <a href="Index.html" class="logo"><span>Top</span>Gym</a>
     <div id="menu-btn" class="fas fa-bars"></div>
     <nav class="navbar">
       <a href="#Hem">Hem</a> <a href="#Om">Om</a> <a href="#funktioner">Funktioner</a> <a href="#pris">Pris</a> <a href="#Bild">Bild</a>
