--- a/Index.html
+++ b/Index.html
@@ -15,7 +15,7 @@
     <a href="#" class="logo"><span>Top</span>Gym</a>
     <div id="menu-btn" class="fas fa-bars"></div>
     <nav class="navbar">
-      <a href="#hem">Hem</a> <a href="#om">Om</a> <a href="#funktioner">Funktioner</a> <a href="#pris">Pris</a> <a href="#Varf%C3%B6r">Varför Pt</a> <a href="#tr%C3%A4nare">Tränare</a> <a href="#blogg">Blogg</a>
+      <a href="#hem">Hem</a> <a href="#om">Om</a> <a href="#funktioner">Funktioner</a> <a href="#pris">Pris</a> <a href="#tränare">Tränare</a> <a href="#Varför">Varför Pt</a> <a href="#blogg">Blogg</a>
     </nav>
   </header>
   <section class="hem" id="hem">
@@ -190,7 +190,7 @@
           <span>"Expert Tränare"</span>
           <h3>Herman "Beast" Tall</h3>
           <div class="share">
-            <a href="https://www.instagram.com/herman.tall/" class="fab fa-instagram"></a> <a href="https://t.snapchat.com/MYvzUreA" class="fab fa-snapchat"></a> <a href="#" class="fab fa-youtube"></a>
+            <a href="https://www.instagram.com/herman.tall/" class="fab fa-instagram"></a> <a href="https://t.snapchat.com/MYvzUreA" class="fab fa-snapchat"></a> <a href="https://www.youtube.com/@sidmannen" class="fab fa-youtube"></a>
           </div>
         </div>
       </div>
@@ -249,7 +249,7 @@
           </div>
         </div>
         <div class="swiper-slide slide">
-          <p>Denna Adnan eller hur man stavar invandrarens namn är en abstrakt negern o gjorde inget bättre för mig! Dålig service, inga resultat, inte nöjd! Lurade mig på att köp pwo, proteinpulver och hela köret. Nu har jag inte pengar till hyra. Undvik!</p>
+          <p>Denna Adnan eller hur man stavar invandrarens namn är en abstrakt "inte svensk" o gjorde inget bättre för mig! Dålig service, inga resultat, inte nöjd! Lurade mig på att köp pwo, proteinpulver och hela köret. Nu har jag inte pengar till hyra.</p>
           <div class="user">
             <img src="images/tim.png" alt="tim">
             <div class="info">
@@ -352,9 +352,11 @@
       </div>
       <div class="box">
         <h3>Följ oss!</h3>
-        <form action="a">
-          <input type="email" name="a" class="email" placeholder="Skriv din mejl" id="a"> <input type="submit" value="Prenumerera" class="btn">
+        <form action="rabatt.html">
+          <input type="email" name="a" class="email" placeholder="Skriv din mejl" id="a">
+          <input type="submit" value="Prenumerera" class="btn">
         </form>
+        
       </div>
     </div>
   </section>
