--- a/PBetala.html
+++ b/PBetala.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="Sv">
+<html lang="sv">
 <head>
   <meta charset="UTF-8">
   <title>TopGym</title>
-  <link rel="icon" type="image/x-icon" href="/images/Alogga.png">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-  <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css">
-  <link rel="stylesheet" href="Css/Betala.css">
+  <link rel="stylesheet" href="css/Betala.css">
 </head>
+<body>
+  <div class="logga">
+    <a href="Index.html" class="logo"><span>Top</span>Gym</a>
+  </div>
 <body>
   <div class="container">
     <form action="https://example.com/submit">
@@ -18,7 +19,7 @@
             <span>För och Efternman:</span> <input type="text" placeholder="Noah Andersson">
           </div>
           <div class="inputBox">
-            <span>Email:</span> <input type="email" placeholder="Exempel@example.com">
+            <span>Email:</span> <input type="email" placeholder="Exempel@exempel.com">
           </div>
           <div class="inputBox">
             <span>Address:</span> <input type="text" placeholder="Exempel 10">
