--- a/SkapaKonto.html
+++ b/SkapaKonto.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="logga">
-        <a href="Gymgenius.html" class="logo"><span>Top</span>Gym</a>
+        <a href="Index.html" class="logo"><span>Top</span>Gym</a>
     </div>
     <div class="container">
         <input id="signup_toggle" type="checkbox">
