--- a/verifikation.html
+++ b/verifikation.html
@@ -6,7 +6,7 @@
     <Title>Verifikation</Title>
     
     <div class="logga">
-        <a href="Gymgenius.html" class="logo"> <span>Top</span>Gym </a>
+        <a href="Index.html" class="logo"> <span>Top</span>Gym </a>
         </div>
 
 <link rel="stylesheet" href="Css/verifikation.css">
