--- a/GBetala.html
+++ b/GBetala.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="logga">
-    <a href="Gymgenius.html" class="logo"><span>Top</span>Gym</a>
+    <a href="Index.html" class="logo"><span>Top</span>Gym</a>
   </div>
   <div class="container">
     <form action="a">
@@ -19,7 +19,7 @@
             <span>För och Efternman:</span> <input type="text" placeholder="Noah Andersson">
           </div>
           <div class="inputBox">
-            <span>Email:</span> <input type="email" placeholder="Exempel@example.com">
+            <span>Email:</span> <input type="email" placeholder="Exempel@exempel.com">
           </div>
           <div class="inputBox">
             <span>Address:</span> <input type="text" placeholder="Exempel 10">
