--- a/GymFörMän.html
+++ b/GymFörMän.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header class="header">
-    <a href="Gymgenius.html" class="logo"><span>Top</span>Gym</a>
+    <a href="Index.html" class="logo"><span>Top</span>Gym</a>
     <div id="menu-btn" class="fas fa-bars"></div>
   </header>
   <section class="about" id="Hem">
