--- a/Rabatt.html
+++ b/Rabatt.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="Css/Rabatt.css">
     <header class="header">
         <div class="logga">
-          <a href="Gymgenius.html" class="logo"><span>Top</span>Gym</a>
+          <a href="Index.html" class="logo"><span>Top</span>Gym</a>
         </div>
       </header>
       <form class="form">
