--- a/VilkenPt.html
+++ b/VilkenPt.html
@@ -7,7 +7,7 @@
 <link rel="icon" type="image/x-icon" href="/images/Alogga.png">
 
 <div class="logga">
-  <a href="Gymgenius.html" class="logo"><span>Top</span>Gym</a>
+  <a href="Index.html" class="logo"><span>Top</span>Gym</a>
 </div>
 <link rel="stylesheet" href="Css/VilkenPt.css">
 <h1>Vilken tränare passar mig</h1>
